syntax = "proto3";

package your.proto.package; // Update with your package name

message DefineMessageFormatRequest {
  string name = 1;
  message Schema {
    string dsl_code = 1;
  }
  Schema schema = 2;
}

message DefineMessageFormatResponse {
  bool success = 1;
}

message MessageRequest {
  string name = 1;
  string payload = 2;
}

message ProcessMessageResponse {
  bool success = 1;
}

service MessageService {
  rpc DefineMessageFormat(DefineMessageFormatRequest) returns (DefineMessageFormatResponse) {}
  rpc ProcessMessage(MessageRequest) returns (ProcessMessageResponse) {}
}
